# Digital-Logic

./: .gitignore  CMakeLists.txt  NAND.txt  install.md  readme.md
includes/: ChipArea.h  MenuScreen.h  MyWindow.h  Parse.h  ScreenRuntime.h  ScreenStack.h  SplashScreen.h  canvas.h  dialog.h  newProjectDialog.h  openProjectDialog.h
src/: CMakeLists.txt  ChipArea.cc  CustomChip.cc  MenuScreen.cc  MyWindow.cc  Parse.cc  ScreenRuntime.cc  ScreenStack.cc  SplashScreen.cc  dialog.cc  main.cpp  newProjectDialog.cc  openProjectDialog.cc  style.css
